--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     location /api/ {
         # Proxy API-verzoeken naar de backendcontainer
-        proxy_pass http://RG-paymentsystem25.northeurope.azurecontainer.io:8080;  # Vervang <backend-container-name> door de naam van je backendcontainer
+        proxy_pass http://RG-paymentsystem25.northeurope.azurecontainer.io:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
