--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,19 +1,27 @@
-server {
-    listen 80;
+worker_processes auto;
 
-    server_name rg-paymentsystem11.northeurope.azurecontainer.io;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-    }
+http {
+    server {
+        listen 80;
 
-    location /api/ {
-        # Proxy API-verzoeken naar de backendcontainer
-        proxy_pass http://RG-paymentsystem25.northeurope.azurecontainer.io:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        server_name rg-paymentsystem11.northeurope.azurecontainer.io;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+        }
+
+        location /api/ {
+            # Proxy API-verzoeken naar de backendcontainer
+            proxy_pass http://RG-paymentsystem25.northeurope.azurecontainer.io:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
