update for nginx file

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,7 +8,7 @@ http {
     server {
         listen 80;
 
-        server_name rg-paymentsystem11.northeurope.azurecontainer.io;
+        server_name RG-paymentsystem17.northeurope.azurecontainer.io;
 
         location / {
             root /usr/share/nginx/html;
