--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,7 +8,7 @@ http {
     server {
         listen 80;
 
-        server_name frontend.privatelink.eventgrid.azure.net;
+        server_name frontend.privatelink.azure.net;
 
         location / {
             root /usr/share/nginx/html;
@@ -17,7 +17,7 @@ http {
 
         location /api/ {
             # Proxy API-verzoeken naar de backendcontainer
-            proxy_pass http://backend.privatelink.eventgrid.azure.net/api/;
+            proxy_pass http://backend.privatelink.azure.net/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
