--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,7 +8,7 @@ http {
     server {
         listen 80;
 
-        server_name 10.6.4.4;
+        server_name RG-paymentsystem.northeurope.azurecontainer.io;
 
         location / {
             root /usr/share/nginx/html;
@@ -17,7 +17,7 @@ http {
 
         location /api/ {
             # Proxy API-verzoeken naar de backendcontainer
-            proxy_pass http://10.6.5.4:80;
+            proxy_pass http://RG-paymentsystem1.northeurope.azurecontainer.io:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
