--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,10 +5,28 @@ events {
 }
 
 http {
+    # Redirect HTTP naar HTTPS
     server {
         listen 80;
+        server_name fonteyn.store www.fonteyn.store;
 
-        server_name rg-paymentsystem.northeurope.azurecontainer.io;
+        # Redirect alle HTTP-verkeer naar HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    #https serverconfig
+
+    server {
+        listen 443 ssl;
+
+        server_name fonteyn.store www.fonteyn.store;
+
+        #SSL certificaat
+        ssl_certificate /etc/nginx/certs/fonteyn.store.crt;
+        ssl_certificate_key /etc/nginx/certs/fonteyn.store.key;
+
+        ssl_protocols TLSv1.2;
+
 
         location / {
             root /usr/share/nginx/html;
@@ -17,7 +35,7 @@ http {
 
         location /api/ {
             # Proxy API-verzoeken naar de backendcontainer
-            proxy_pass http://rg-paymentsystem40.northeurope.azurecontainer.io:80;
+            proxy_pass https://api.fonteyn.store:443;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
