--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,21 +11,15 @@ http {
         server_name fonteyn.store www.fonteyn.store;
 
         # Redirect alle HTTP-verkeer naar HTTPS
-        return 301 https://$host$request_uri;
+        return 301 http://$host$request_uri;
     }
 
     #https serverconfig
 
     server {
-        listen 443 ssl;
+        listen 80;
 
         server_name fonteyn.store www.fonteyn.store;
-
-        #SSL certificaat
-        ssl_certificate /etc/nginx/certs/fonteyn.store.crt;
-        ssl_certificate_key /etc/nginx/certs/fonteyn.store.key;
-
-        ssl_protocols TLSv1.2;
 
 
         location / {
@@ -35,7 +29,7 @@ http {
 
         location /api/ {
             # Proxy API-verzoeken naar de backendcontainer
-            proxy_pass https://api.fonteyn.store:443;
+            proxy_pass http://api.fonteyn.store:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
