--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,13 +4,13 @@ events {
     worker_connections 1024;
 }
 
-http {
+#http {
     # Redirect HTTP naar HTTPS
-    server {
-        listen 80;
-        server_name fonteyn.store www.fonteyn.store;
+    #server {
+     #   listen 80;
+     #   server_name fonteyn.store;
 
-    }
+ #   }
 
     #https serverconfig
 
