--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,7 +17,7 @@ events {
     server {
         listen 80;
 
-        server_name fonteyn.store www.fonteyn.store;
+        server_name fonteyn.store;
 
 
         location / {
@@ -34,4 +34,4 @@ events {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-}
+
