--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,21 +4,11 @@ events {
     worker_connections 1024;
 }
 
-#http {
-    # Redirect HTTP naar HTTPS
-    #server {
-     #   listen 80;
-     #   server_name fonteyn.store;
-
- #   }
-
-    #https serverconfig
-
+http {
     server {
         listen 80;
 
         server_name fonteyn.store;
-
 
         location / {
             root /usr/share/nginx/html;
@@ -34,4 +24,5 @@ events {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
+}
 
