--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,7 +8,7 @@ http {
     server {
         listen 80;
 
-        server_name fonteyn.store;
+        server_name rg-paymentsystem.northeurope.azurecontainer.io;
 
         location / {
             root /usr/share/nginx/html;
@@ -17,7 +17,7 @@ http {
 
         location /api/ {
             # Proxy API-verzoeken naar de backendcontainer
-            proxy_pass http://api.fonteyn.store:80;
+            proxy_pass http://rg-paymentsystem40.northeurope.azurecontainer.io:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,4 +25,3 @@ http {
         }
     }
 }
-
