--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -43,11 +43,11 @@ jobs:
         az container create \
           --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
           --name aci-frontend-group \
-          --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }} \
-          --container-name container1 \
-          --container-name container2 \
           --cpu 1 \
           --memory 1.5 \
           --os-type Linux \
           --dns-name-label aci-frontend-group \
           --ports 80
+          --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }} \
+          --containers name=container1,image=${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }} \
+          --containers name=container2,image=${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}
