--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -48,5 +48,4 @@ jobs:
           --os-type Linux \
           --dns-name-label aci-frontend-group \
           --ports 80 \
-          --containers name=container1,image=${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }} \
-          --containers name=container2,image=${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}
+          --containers '[{"name": "container1", "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}"}, {"name": "container2", "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}"}]'
