--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -38,103 +38,18 @@ jobs:
           --yes
 
     # Stap 6: Deploy de nieuwe Container Group met twee containers
-    - name: 'Deploy New Container Group with Two Containers'
+    - name: 'Deploy to Azure Container Instance with multiple containers'
       run: |
         az container create \
-        --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-        --name aci-frontend-group \
-        --os-type Linux \
-        --dns-name-label aci-frontend-group \
-        --ports 80 \
-        --registry-login-server ${{ secrets.REGISTRY_LOGIN_SERVER }} \
-        --registry-username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
-        --registry-password ${{ secrets.AZURE_REGISTRY_PASSWORD }} \
-        --cpu 1 \
-        --memory 1.5 \
-        --ip-address Public \
-        --restart-policy Always \
-        --containers '[
-            {
-              "name": "container1",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            },
-            {
-              "name": "container2",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            }
-          ]'--containers '[
-            {
-              "name": "container1",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            },
-            {
-              "name": "container2",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            }
-          ]'--containers '[
-            {
-              "name": "container1",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            },
-            {
-              "name": "container2",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            }
-          ]'--containers '[
-            {
-              "name": "container1",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            },
-            {
-              "name": "container2",
-              "image": "${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }}",
-              "resources": {
-                "requests": {
-                  "cpu": 1,
-                  "memoryInGB": 1.5
-                }
-              }
-            }
-          ]'
+          --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+          --name aci-payment-system \
+          --location northeurope \
+          --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }} \
+          --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/backend:${{ github.sha }} \
+          --cpu 1 \
+          --memory 2.0 \
+          --ports 80 \
+          --registry-login-server ${{ secrets.REGISTRY_LOGIN_SERVER }} \
+          --registry-username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
+          --registry-password ${{ secrets.AZURE_REGISTRY_PASSWORD }} \
+          --dns-name-label ${{ secrets.AZURE_RESOURCE_GROUP }}
