--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -52,5 +52,5 @@ jobs:
           --registry-login-server ${{ secrets.REGISTRY_LOGIN_SERVER }} \
           --registry-username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
           --registry-password ${{ secrets.AZURE_REGISTRY_PASSWORD }} \
-          --dns-name-label ${{ secrets.AZURE_RESOURCE_GROUP }}
+          --dns-name-label ${{ secrets.AZURE_RESOURCE_GROUP }} \
           --os-type Linux
