--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         az container create \
           --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-          --name aci-payment-system \
+          --name aci-frontend \
           --location northeurope \
           --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/frontend:${{ github.sha }} \
           --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/backend:${{ github.sha }} \
